--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -14,6 +14,12 @@ body {
   background-color: hsl(226, 43%, 10%);
   margin: 0 auto;
 }
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    align-items: center;
+  }
+}
 
 main {
   color: hsl(236, 100%, 87%);
@@ -59,7 +65,7 @@ main {
 main .dash-card {
   width: 100%;
   height: 13rem;
-  border-radius: 1rem;
+  border-radius: 0.8rem;
   background-color: hsl(235, 46%, 20%);
   display: flex;
   flex-direction: column;
@@ -77,16 +83,22 @@ main .dash-card header {
   justify-content: start;
   color: hsl(236, 100%, 87%);
   padding-inline: 1.8rem;
-  border-radius: 1rem;
+  border-radius: 0.8rem;
   height: 10rem;
   gap: 1rem;
 }
-main .dash-card header small {
-  font-size: 1rem;
+@media (min-width: 1024px) {
+  main .dash-card header {
+    height: 70%;
+    align-items: start;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-block-start: 2rem;
+  }
 }
 main .dash-card header p {
-  font-size: 1.7rem;
-  line-height: 1.5;
+  font-size: 1.9rem;
+  line-height: 1.2;
   font-weight: 300;
   color: hsl(45, 29%, 97%);
 }
@@ -101,8 +113,18 @@ main .dash-card .timeframes {
   justify-content: space-around;
   padding-block: 1.5rem;
 }
+@media (min-width: 1024px) {
+  main .dash-card .timeframes {
+    display: inherit;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-inline: 1.5rem;
+    align-items: start;
+    height: 30%;
+  }
+}
 main .dash-card .timeframes p {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 300;
 }
 main .dash-card .timeframes p:hover {
@@ -110,11 +132,14 @@ main .dash-card .timeframes p:hover {
   cursor: pointer;
 }
 main .dash-card-text {
-  background-color: hsl(235, 46%, 20%);
   height: 100%;
   width: 100%;
-  border-radius: 1rem;
-  padding: 2rem;
+  padding: 1rem 1.5rem;
+  border-radius: 0.8rem;
+  background-color: hsl(235, 46%, 20%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 main .dash-card-text .card-content {
   display: flex;
@@ -131,14 +156,25 @@ main .dash-card-text .card-content picture img {
   object-fit: contain;
 }
 main .dash-card-text .card-content .title {
-  font-size: 1.5rem;
+  font-size: 18px;
   font-weight: 500;
   color: hsl(45, 29%, 97%);
 }
 main .dash-card-text .card-content .current-time {
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 300;
   color: hsl(45, 29%, 97%);
+}
+main .dash-card-text .card-content .previous-time {
+  font-size: 0.8rem;
+}
+@media (min-width: 1024px) {
+  main .dash-card-text .weekly {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.3rem;
+  }
 }
 main .profile {
   height: 100%;
